# voxcell

./: pyproject.toml  setup.py  tox.ini
.github/workflows/: run-tox.yml
doc/source/: conf.py
tests/: test_cell_collection.py  test_math_utils.py
voxcell/: cell_collection.py  math_utils.py  traits.py  voxel_data.py
