[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "voxcell"
dynamic = ["version"]
description = "Voxcell is a small library to handle probability distributions that have a spatial component and to use them to build collection of cells in space."
readme = {file = "README.rst", content-type = "text/x-rst"}
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [{name = "Blue Brain Project, EPFL"}]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "h5py>=3.1.0",
    "numpy>=1.9",
    "pandas>=0.24.2",
    "pynrrd>=1.1.0",
    "requests>=2.18",
    "scipy>=1.2.0",
]

[project.optional-dependencies]
docs = ["sphinx-bluebrain-theme"]

[project.urls]
Homepage = "https://github.com/BlueBrain/voxcell"
Download = "https://github.com/BlueBrain/voxcell"

[tool.setuptools.packages.find]

[tool.setuptools_scm]
local_scheme = "no-local-version"

[tool.black]
line-length = 100
target-version = [
    'py37',
    'py38',
]
include = 'voxcell\/.*\.py$|tests\/.*\.py$|doc\/source\/conf\.py$|setup\.py$'

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
